--- a/support/index.html.md.erb
+++ b/support/index.html.md.erb
@@ -337,6 +337,7 @@ The following private channels are permanent fixtures in support. Usage estimate
 | `#spt_managers-amer` | AMER Managers+ | Used for sensitive topics that are applicable to AMER managers that aren't appropriate for public channels | 1-2 threads per week |
 | `#spt_hiring-mgmt` | Managers+, Recruiting, Finance | Used for coordinating offers and discussing hiring specifics that can be shared in the public channel | 1-2 threads per week |
 | `#fy23_support_promotions` | Managers+, People Business Parter | Used for coordinating and planning promotions in FY23 | 0 threads per week, mostly informational |
+| `#cto_spt_directors` | CTO, Directors | Used for Directors + CTO to discuss and coordinate on sensitive topics / budget / etc. | 3-4 threads per week | 
 
 Before starting a new private channel, ask yourself _Why **can't** everyone contribute here?_ Appropriate answers might be:
 - this channel will be used to discuss material, non-public information that may affect designated insider status.
