Update 3 files for data intelligence

--- a/sales/index.html.md.erb
+++ b/sales/index.html.md.erb
@@ -49,6 +49,7 @@ description: "The GitLab Field team includes multiple functions: Enterprise Sale
 | [Record Ownership](/handbook/sales/field-operations/gtm-resources/#record-ownership) |  |  |  |
 | [Routing Rules](/handbook/sales/field-operations/gtm-resources/#routing) |  |  |  |
 | [Forecasting Definitions and Processes](/handbook/sales/forecasting/) |  |  |  |
+| [Data Intelligence](/handbook/sales/field-operations/data-intelligence/) |  |  |  |
 | [Associating emails to Salesforce](/handbook/sales/prospect-engagement-best-practices/#associating-emails-to-opportunities) |  |  |  |
 | **Early to Mid-Stage** | **Late Stage** | **Post Sales Processes** | **Team Member & Manager Resources** |
 | ------ | ------ | ------ | ------ |
