--- a/development/enablement/index.html.md.erb
+++ b/development/enablement/index.html.md.erb
@@ -43,7 +43,7 @@ Enablement focuses on improving our capabilities and metrics in the following ar
     { name: 'Gitaly', manager: 'andrashorvath' },
     { name: 'Global Search', manager: 'cliu', regexp: /Global Search/ },
     { name: 'Application Performance', manager: 'pjphillips', regexp: /Application Performance/ },
-    { name: 'Pods (formerly Sharding)', manager: 'gitlabbarry' },
+    { name: 'Pods', manager: 'arturo-herrero' },
 
  ]
  department_regexp = /(#{Regexp.union(departments.map{ |d| d[:name] })})/
@@ -62,15 +62,16 @@ The following people are permanent members of teams that belong to the Enablemen
 
 The following table shows who will provide cover if one or more of the Enablement Engineering management team are unable to work for any reason.
 
-| Team Member     | Issues/MRs Backup        | People Management Backup    | Escalation   |
-| -----           | -----                    | -----                 | -----        |
-| Chun Du         | Christopher Lefelhocz    | Christopher Lefelhocz | Ashley Kramer |
-| Nick Nguyen     | Kamil Trzcinski (Pods/Decomposition) | Changzheng Liu, Alex Ives        | Chun Du      |
-| Changzheng Liu  | Dmitry Gruzd (Global Search), Matthias Käppler (Memory)             | Nick Nguyen           | Chun Du      |
-| Alex Ives       | Andreas Brandl           | Nick Nguyen           | Chun Du      |
-| DJ Mountney     | Jason Plum            | Chun Du        | Chun Du      |
-| Andras Horvath  | Patrick Steinhardt       | Chun Du    | Chun Du      |
-| Barry Firman    | Thong Kuah               | Nick Nguyen           | Chun Du      |
+| Team Member     | Issues/MRs Backup        | People Management Backup    | Escalation    |
+| -----           | -----                    | -----                       | -----         |
+| Chun Du         | Christopher Lefelhocz    | Christopher Lefelhocz       | Jorg Hellig   |
+| Nick Nguyen     | Dylan Griffith           | Changzheng Liu, Alex Ives   | Chun Du       |
+| Changzheng Liu  | Dmitry Gruzd             | Nick Nguyen                 | Chun Du       |
+| Paul Phillips   | Matthias Käppler         | Nick Nguyen                 | Chun Du       |
+| Alex Ives       | Andreas Brandl           | Nick Nguyen                 | Chun Du       |
+| DJ Mountney     | Jason Plum               | Chun Du                     | Chun Du       |
+| Andras Horvath  | Patrick Steinhardt       | Chun Du                     | Chun Du       |
+| Arturo Herrero  | Thong Kuah               | Nick Nguyen                 | Chun Du       |
 
 If an Engineer is unavailable the person providing `Issues/MRs` coverage will reassign open issues and merge requests to another engineer, preferably in the same [group](#all-team-members).
 
