Added link to latest spike

--- a/development/dev/plan-project-management/index.html.md.erb
+++ b/development/dev/plan-project-management/index.html.md.erb
@@ -79,7 +79,7 @@ DRI rotation:
 | DRI | Start date | End date | Spike |
 | --- | --- | --- | --- |
 | Alexandru Croitor | 2023-01-23 | 2023-02-03 | [Moving work items](https://gitlab.com/gitlab-org/gitlab/-/issues/387304) |
-| Simon Knox | 2023-02-06 | 2023-02-17 | |
+| Simon Knox | 2023-02-06 | 2023-02-17 | [Frontend of work items at the group level](https://gitlab.com/gitlab-org/gitlab/-/issues/390432) |
 | Heinrich Lee Yu | 2023-02-20 | 2023-03-03 | |
 | Coung Ngo | 2023-03-06 | 2023-03-17 | |
 | Mario Celi | 2023-03-20 | 2023-03-31 | |
