Fix broken link in PI Guide

--- a/product/product-intelligence-guide/index.html.md.erb
+++ b/product/product-intelligence-guide/index.html.md.erb
@@ -179,7 +179,7 @@ Although PMs commonly use Service Ping metrics to measure feature health and pro
 For a [variety of reasons](https://www.youtube.com/watch?v=qgnWYIynDF4), we [recommend not changing](https://docs.gitlab.com/ee/development/service_ping/metrics_lifecycle.html#change-an-existing-metric) the calculation of metrics that are used for reporting once implemented. If you do need to change a metric that is being used, please coordinate with the customer success team before doing so so that they can update their models and health scores accordingly. To identify metrics that are relied upon for reporting, follow these directions.
 
 ### xMAU Reporting
-1. Go to the [Metrics Dictionary](metrics.gitlab.com)
+1. Go to the [Metrics Dictionary](https://metrics.gitlab.com)
 2. Click "Customize table" and select "Performance indicator type"
 3. Search for a metric and view the **performance indicator type** values.
     - If the field is blank, there are no xMAU reporting dependencies on this metric
