--- a/infrastructure/team/reliability/practices.html.md.erb
+++ b/infrastructure/team/reliability/practices.html.md.erb
@@ -96,7 +96,6 @@ The Practices team does not necessarily own the above KPIs and metrics but rathe
  - Strong knowledge of SLI/SLO in general and how they work at GitLab.
 
 ## Dashboards and common links
-  - Team dashboards
 
 ### Project work VS Operations Work
 
@@ -104,11 +103,51 @@ We strive for a 50% split between project work and operations work.
 Having more than 50% operations work is an indicator that the service/team is not in a healthy state and is something that needs to be addressed.
 More detail on this can be found in <https://sre.google/workbook/part-II-practices/>
 
-### Gitaly Issue Tracker
+#### All Services
 
 <% if ENV['PERISCOPE_EMBED_API_KEY'] %>
   <div>
-    <embed width="100%" height="100%" style="min-height:300px;" src="<%= signed_periscope_url({ chart: 15996542,dashboard: 1019503 , embed: "v2"}) %>">
+    <embed width="100%" height="100%" style="min-height:300px;" src="<%= signed_periscope_url({ chart: 16312060,dashboard: 1019503 , embed: "v2"}) %>">
+  </div>
+  <% else %>
+    <p>You must set a <code>PERISCOPE_EMBED_API_KEY</code> environment variable to render this chart.</p>
+<% end %>
+
+#### Service::Gitaly
+
+<% if ENV['PERISCOPE_EMBED_API_KEY'] %>
+  <div>
+    <embed width="100%" height="100%" style="min-height:300px;" src="<%= signed_periscope_url({ chart: 16312588,dashboard: 1019503 , embed: "v2"}) %>">
+  </div>
+  <% else %>
+    <p>You must set a <code>PERISCOPE_EMBED_API_KEY</code> environment variable to render this chart.</p>
+<% end %>
+
+#### Service::Praefect
+
+<% if ENV['PERISCOPE_EMBED_API_KEY'] %>
+  <div>
+    <embed width="100%" height="100%" style="min-height:300px;" src="<%= signed_periscope_url({ chart: 16312580,dashboard: 1019503 , embed: "v2"}) %>">
+  </div>
+  <% else %>
+    <p>You must set a <code>PERISCOPE_EMBED_API_KEY</code> environment variable to render this chart.</p>
+<% end %>
+
+#### Service::CI Runners
+
+<% if ENV['PERISCOPE_EMBED_API_KEY'] %>
+  <div>
+    <embed width="100%" height="100%" style="min-height:300px;" src="<%= signed_periscope_url({ chart: 16312586,dashboard: 1019503 , embed: "v2"}) %>">
+  </div>
+  <% else %>
+    <p>You must set a <code>PERISCOPE_EMBED_API_KEY</code> environment variable to render this chart.</p>
+<% end %>
+
+#### Service::CustomersDot
+
+<% if ENV['PERISCOPE_EMBED_API_KEY'] %>
+  <div>
+    <embed width="100%" height="100%" style="min-height:300px;" src="<%= signed_periscope_url({ chart: 16312590,dashboard: 1019503 , embed: "v2"}) %>">
   </div>
   <% else %>
     <p>You must set a <code>PERISCOPE_EMBED_API_KEY</code> environment variable to render this chart.</p>
