--- a/development/fulfillment/purchase/index.html.md.erb
+++ b/development/fulfillment/purchase/index.html.md.erb
@@ -16,7 +16,6 @@ For more details about the product vision for Fulfillment, see our [Fulfillment]
 
 The Purchase group manages the [Purchase category](/handbook/product/categories/#purchase-group).
 
-
 ## Team members
 
 <%= department_team(base_department: "Fulfillment:Purchase Team") %>
@@ -34,6 +33,17 @@ The team meets synchronously once per week alternating timezones between EMEA an
 
 ### Weekly update
 The Engineering Manager provides a weekly update on the team progress toward the milestone objectives. This should include the weight closed relative to the weight of the entire milestone. This update is added as a comment to the milestone planning issue prior to the weekly team meeting. In case the Engineering Manager is unavailable to provide the weekly update, an alternate team member will be assigned via the #s_fulfillment Slack channel.
+
+### Issue boards
+
+We have two issue boards that we actively work from:
+
+1. Active Milestone: https://gitlab.com/groups/gitlab-org/-/boards/5019876
+1. Next Milestone: https://gitlab.com/groups/gitlab-org/-/boards/5078830
+
+Our active milestone board contains the issues that we are currently working on or have planned to work on in the current milestone. The next milestone board is used to plan the upcoming milestone and contains the issues that have been scheduled for the next milestone or are being considered for it.
+
+At the end of the milestone, all the issues still open on the active milestone board need to be re-assigned to the new milestone and the milestone on the board needs to be updated to the new milestone. The next milestone board's milestone also needs to be updated to the following one, but the issues don't need to be updated, as they should now show up on the active milestone board.
 
 ### Milestone planning
 It is important for long term planning for the team to accomplish what we agree to at the beginning of the milestone. A significant aspect to completing our planned work is accurately weighting issues. The explanation of weights is specified on the [Fulfillment Sub-department page](https://about.gitlab.com/handbook/engineering/development/fulfillment/#estimation). We further specify, as a baseline, a 5 should roughly take 2 engineering weeks of work to complete. Issues with a weight of 1 should be rare and reserved for cases with no logic changes such as changing the text in a dialog or fixing a comment. A weight of 2 should be used when there are 1 or 2 minor logic changes. Likewise if an issue contains significant unknowns or will span multiple projects and many files, don't hesitate to weight at 8 or higher. This should trigger us to look more closely at breaking the issue into smaller issues, or more closely defining the implementation requirements.
