Add open source app for window management

--- a/culture/all-remote/workspace/index.html.md.erb
+++ b/culture/all-remote/workspace/index.html.md.erb
@@ -117,7 +117,7 @@ If you feel that your digital workspace is too cramped when relying solely on a 
 
 If you do video calls often, an external display will enable you to use one screen for video chatting and another for documentation, referencing pages, etc. 
 
-If you feel overwhelmed by too much information spread across multiple monitors, consider [window management software solutions](https://thesweetsetup.com/window-management-macos-2018/){:target="_blank"} such as [Divvy](https://mizage.com/divvy/){:target="_blank"} and [Magnet](https://apps.apple.com/us/app/magnet/id441258766?ign-mpt=uo%3D4&mt=12){:target="_blank"}. 
+If you feel overwhelmed by too much information spread across multiple monitors, consider [window management software solutions](https://thesweetsetup.com/window-management-macos-2018/){:target="_blank"} such as [Rectangle](https://github.com/rxhanson/Rectangle){:target="_blank"} and [Magnet](https://apps.apple.com/us/app/magnet/id441258766?ign-mpt=uo%3D4&mt=12){:target="_blank"}. 
 
 If you'd like a portable monitor and you primarily use a MacBook laptop, consider expanding your visual workspace with [Sidecar](https://www.apple.com/newsroom/2019/06/apple-previews-macos-catalina/){:target="_blank"} (available in macOS Catalina). This allows an iPad to double as a secondary display for your Mac.
 
