Updating projections team page

--- a/infrastructure/team/scalability/projections.html.md.erb
+++ b/infrastructure/team/scalability/projections.html.md.erb
@@ -12,6 +12,8 @@ This team focuses on forecasting & projection systems that enable development en
 system growth (planned and unplanned) for their areas of responsibility. Error Budgets and Stage Group Dashboards
 are examples of successful projects that have provided development teams information about how their code runs on GitLab.com.
 
+As Dedicated becomes more mature, we will expand our remit to include projection activities for this platform. 
+
 We use metrics to gather data to inform our decisions. We contribute to the observability of the system by maintaining
 metrics that concern saturation and improving observability tools that we can use to help us understand how the system
 responds to load.
@@ -24,7 +26,7 @@ The following people are members of the Scalability:Projections team:
 
 ## Team Responsibilities
 
-We are responsible for Capacity Planning and Error Budgets.
+We are responsible for Capacity Planning, Error Budgets and Infrastructure Cost Data.
 
 ### Capacity Planning
 
@@ -40,11 +42,6 @@ the label of `Saturation Metrics`.
 
 | Week starting | Person |
 | --- | --- |
-| 2023-01-09 | Sean |
-| 2023-01-16 | Sean |
-| 2023-01-23 | Sean |
-| 2023-01-30 | Stephanie |
-| 2023-02-06 | Stephanie |
 | 2023-02-13 | Stephanie |
 | 2023-02-20 | Bob |
 | 2023-03-06 | Bob |
@@ -61,7 +58,7 @@ the label of `Saturation Metrics`.
 
 The responsibility for reviewing Tamland reports rotates between team members and includes the Engineering Manager. 
 
-The rotation is arranged alphabetically by first name and lasts for a minimum of three weeks. There is flexibility in the schedule to allow for OOO and on-call responsibilities. 
+The rotation lasts for a minimum of three weeks. There is flexibility in the schedule to allow for OOO and on-call responsibilities. 
 
 The purpose of having a longer rotation cycle is to provide exposure to the wide variety of capacity warnings that occur and to enable each person to gain context on every component that we monitor. 
 
