--- a/development/sec/govern/compliance/index.html.md.erb
+++ b/development/sec/govern/compliance/index.html.md.erb
@@ -89,7 +89,7 @@ We plan in monthly cycles in accordance with our [Product Development Timeline](
 #### Demos
 During the `workflow::verification` process, we determine whether the Issue requires a demo. If unsure, work with PM to determine if a demo is required. Demos are great for showcasing progress and help users quickly understand how to use a features and its benefits. Our process for this is similar to [Single Engineer Groups Demo](https://about.gitlab.com/handbook/engineering/demos/#single-engineer-groups-demo):
 
-- Record a video on your computer or via Zoom livestream of the working software
+- Record a video on your computer or via Zoom livestream of the working software. You can also use [loom](https://about.gitlab.com/handbook/tools-and-tips/other-apps/#loom) for recording demos.
 - Upload to the [GitLab Unfiltered Channel](https://www.youtube.com/channel/UCMtZ0sc1HHNtGGWZFDRTh5A) and add to the [Compliance Playlist](https://www.youtube.com/playlist?list=PL05JrBw4t0Kq7_yBKIYHi8qvCWeU0Q3yH)
 - Post the YouTube link to the appropriate Slack channel and in the Issue
 
