--- a/quality/quality-engineering/dev-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/dev-qe-team/index.html.md.erb
@@ -34,16 +34,14 @@ Quality Engineering Manager: Ramya Authappan
 |------	|-----------	|--------------------------	|---------------------------------------------------------------------	|
 | 1    	| Create    	| [Source Code]            	| Anastasia McDonald                                                    |
 | 2    	| Create    	| [Code Review]            	| Jay McCure                                                           	|
-| 3    	| Create    	| [Editor]                 	| TBH                                                   	    |
+| 3    	| Create    	| [Editor]                 	| TBH                                                   	            |
 | 4    	| Manage    	| [Authentication and Authorization]                 	| Sanad Liaquat                             |
-| 5    	| Manage    	| [Organization]           	| TBH                                                        |
-| 6    	| Manage    	| [Import]                 	| Andrejs Cunskis                                                      	|
-| 7    	| Manage    	| [Optimize]               	| TBH                                                                  	|
+| 5    	| Manage    	| [Import-Integrations]     | Andrejs Cunskis                                                      	|
+| 6    	| Manage    	| [Foundations]           	| TBH                                                                   |
+| 7    	| Plan    	    | [Optimize]               	| TBH                                                                  	|
 | 8   	| Plan      	| [Project Management]     	| Désirée Chevalier                                                    	|
 | 9   	| Plan      	| [Product Planning]       	| TBH                                                                  	|
-| 10   	| Plan      	| [Certify]                	| TBH                                                                  	|
-| 11   	| Manage    	| [Integrations]           	| TBH 	                                                        |
-| 12   	| Manage 	    | [Foundations]            	| TBH                                                                  	|
+| 10   	| Plan      	| [Knowledge]                	| TBH                                                                  	|
 
 ### Quality Performance Indicators for Dev Section
 
@@ -60,17 +58,14 @@ Please find below the relevant projects/epics/issue boards used by various produ
 |----------|----------------------|---------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | 1        | [Source Code]        |  Anastasia McDonald             | [Planning Issue](https://gitlab.com/gitlab-org/create-stage/-/issues/?search=Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Asource%20code&first_page_size=20)                                                       |
 | 2        | [Code Review]        | Jay McCure                      | [Planning Issue](https://gitlab.com/gitlab-org/create-stage/-/issues/?search=Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Acode%20review&first_page_size=20)                                                       |
-| 3        | [Editor]             | Ramya Authappan                 |      [Planning Issue](https://gitlab.com/gitlab-com/create-stage/editor/-/issues/?sort=created_asc&state=all&label_name%5B%5D=Planning%20Issue&first_page_size=20) |
-| 4        | [Authentication and Authorization]        | Sanad Liaquat                   | [Planning Issue](https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aauthentication%20and%20authorization&first_page_size=20) |
-| 5        | [Organization]       | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aorganization&first_page_size=20)                            |
-| 6        | [Import]             | Andrejs Cunskis |[Planning Issue](https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aimport&first_page_size=20)              |
+| 3        | [Editor]             | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-com/create-stage/editor/-/issues/?sort=created_asc&state=all&label_name%5B%5D=Planning%20Issue&first_page_size=20) |
+| 4        | [Authentication and Authorization]  | Sanad Liaquat    | [Planning Issue](https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aauthentication%20and%20authorization&first_page_size=20) |
+| 5        | [Import-Integrations]             | Andrejs Cunskis                 |[Planning Issue](https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aimport&first_page_size=20)              |
+| 6        | [Foundations]        | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-org/manage/foundations/team-tasks/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Afoundations&first_page_size=20)                         |
 | 7        | [Optimize]           | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aoptimize&first_page_size=20)                             |
-| 8       | [Project Management] | Désirée Chevalier               | [Planning Issue](https://gitlab.com/gitlab-org/plan/-/issues/?search=Release%20Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Aproject%20management&first_page_size=20)                                              |
-| 9       | [Product Planning]   | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-org/plan/-/issues/?search=Release%20Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Aproduct%20planning&first_page_size=20)                                                |
-| 10       | [Certify]            | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-org/plan/-/issues/?search=Release%20Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Aproduct%20planning&first_page_size=20)                                                |
-| 11       | [Integrations]       | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-org/manage/integrations/team/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aintegrations&first_page_size=20)                        |
-| 12       | [Foundations]        | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-org/manage/foundations/team-tasks/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Afoundations&first_page_size=20)                         |
-
+| 8        | [Project Management] | Désirée Chevalier               | [Planning Issue](https://gitlab.com/gitlab-org/plan/-/issues/?search=Release%20Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Aproject%20management&first_page_size=20)                                              |
+| 9        | [Product Planning]   | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-org/plan/-/issues/?search=Release%20Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Aproduct%20planning&first_page_size=20)                                                |
+| 10       | [Knowledge]          | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-org/plan/-/issues/?search=Release%20Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Aproduct%20planning&first_page_size=20)                                                |
 
 ## Analytics Section
 
