Fix issue board links for purchase team page

--- a/development/fulfillment/purchase/index.html.md.erb
+++ b/development/fulfillment/purchase/index.html.md.erb
@@ -38,8 +38,8 @@ The Engineering Manager provides a weekly update on the team progress toward the
 
 We have two issue boards that we actively work from:
 
-1. Active Milestone: https://gitlab.com/groups/gitlab-org/-/boards/5019876
-1. Next Milestone: https://gitlab.com/groups/gitlab-org/-/boards/5078830
+1. [Active Milestone](https://gitlab.com/groups/gitlab-org/-/boards/5019876)
+1. [Next Milestone](https://gitlab.com/groups/gitlab-org/-/boards/5078830)
 
 Our active milestone board contains the issues that we are currently working on or have planned to work on in the current milestone. The next milestone board is used to plan the upcoming milestone and contains the issues that have been scheduled for the next milestone or are being considered for it.
 
