Update Slack chan and issue board link for the Reliability General team

--- a/infrastructure/team/reliability/general.html.md.erb
+++ b/infrastructure/team/reliability/general.html.md.erb
@@ -62,5 +62,5 @@ The General Team must maintain a broad and diverse set of technical skills while
 
 ## Common Links
 
- * Issue Board: [All issue by priority](https://gitlab.com/gitlab-com/gl-infra/reliability/-/boards/3993753?label_name%5B%5D=Squad%3A%3AGeneral)
- * Slack Channel: #reliability-general-squad
+ * Issue Board: [All issue by priority](https://gitlab.com/gitlab-com/gl-infra/reliability/-/boards/3993753?label_name%5B%5D=team%3A%3AGeneral)
+ * Slack Channel: #g_infra_general
