Update Engineering Productivity team structure

--- a/quality/engineering-productivity/index.html.md.erb
+++ b/quality/engineering-productivity/index.html.md.erb
@@ -107,7 +107,7 @@ graph TD
 
 ## Team Members
 
-<%= direct_team(manager_role: 'Acting Manager, Senior Backend Engineer, Engineering Productivity', extra_slugs: ['remy-c']) %>
+<%= direct_team(manager_role: 'Director of Engineering Productivity', extra_slugs: ['remy-c']) %>
 
 ### Stable Counterpart
 
