--- a/quality/index.html.md.erb
+++ b/quality/index.html.md.erb
@@ -71,10 +71,10 @@ In FY23 we will be focused on contributor success & customer results while deliv
 
 ### Customer Centric Quality
 
-- Expand & improve upon deploy with confidence work foundation. 
-- Outreach to understand user's needs of reference architecture. 
+- Expand & improve upon deploy with confidence work foundation.
+- Outreach to understand user's needs of reference architecture.
 - Improve maturity of reference architectures, its components and validation.
-- Expand the capability of staging environments according to engineers' needs. 
+- Expand the capability of staging environments according to engineers' needs.
 - Increase customer empathy by participating in activities that highlights their painpoints.
 
 ### Increase Contributions
@@ -82,11 +82,11 @@ In FY23 we will be focused on contributor success & customer results while deliv
 - Execute funnel approach strategy with Marketing division.
 - Reduce review and merge time of contributions with a focus on per product group analysis.
 - Increase MR Coaches prioritizing product groups that are more popular with contributors.
-- Identify, recognize and retain regular contributors. 
+- Identify, recognize and retain regular contributors.
 - Setup community teams to foster contributor sense of belonging.
 - Increase type & frequency of community awards.
 
-### Customer Contributions 
+### Customer Contributions
 
 - Reach out to large customers to understand their needs for contribution.
 - Establish predictable customer realized time-to-value for their contributions.
@@ -106,13 +106,13 @@ In FY23 we will be focused on contributor success & customer results while deliv
 
 - Implement key data & metrics for Engineering in a timely fashion.
 - Improve format and delivery of Engineering performance indicators.
-- Ensure all Engineering teams have real-time awareness of their engineering metrics big-picture. 
+- Ensure all Engineering teams have real-time awareness of their engineering metrics big-picture.
 - Provide work allocation insights between Engineering teams & departments.
 - Empower teams to take action on quality in their areas via data.
 
 ### Team Growth & Engagement
 
-- Provide geo-diverse department activity and presence. 
+- Provide geo-diverse department activity and presence.
 - Provide clear actionable career paths for all job-families.
 - Provide learning & growing opportunities for the management team.
 - Collaborate with recruitment to ensure timely hiring.
@@ -121,7 +121,7 @@ In FY23 we will be focused on contributor success & customer results while deliv
 
 ## OKRs
 
-Objectives and Key Results (OKRs) help align our department towards what really matters. These happen quarterly and are based on [company OKRs](/company/okrs/) and we follow the OKR process defined here(/company/okrs/#how-to-use-gitlab-for-okrs). We check in on the status of our progress routinely throughout the quarter to determine whether we are on track or need to pivot in order to accomplish or change these goals. At the end of the quarter, we do a [final scoring](/company/okrs/#scoring-okrs) which includes a [retrospective](/handbook/engineering/#okr-retrospection) on how the quarter went according to these OKRs. 
+Objectives and Key Results (OKRs) help align our department towards what really matters. These happen quarterly and are based on [company OKRs](/company/okrs/) and we follow the OKR process defined here(/company/okrs/#how-to-use-gitlab-for-okrs). We check in on the status of our progress routinely throughout the quarter to determine whether we are on track or need to pivot in order to accomplish or change these goals. At the end of the quarter, we do a [final scoring](/company/okrs/#scoring-okrs) which includes a [retrospective](/handbook/engineering/#okr-retrospection) on how the quarter went according to these OKRs.
 
 ### Current quarter
 
@@ -435,7 +435,7 @@ If additional input is needed from the Quality team, the DRI for this is the Dir
 | Quality Department Bi-Weekly | Department management team | `@meks` | Every 2 weeks | Review meeting |
 | Quality Department Social Call | All team members | All team members | Every 2 weeks | Meet and Greet |
 | Quality Hiring Bi-Weekly | All QEMs, Directors, and VP | `TBD` | Every 2 weeks | Review meeting |
-| Ops section stakeholder review | `@jo_shih` | `@jennli` <br>`@zeffmorgan` | Every 4 weeks | Review meeting |
+| Ops section stakeholder review | `@jo_shih` | `@dcroft` <br>`@zeffmorgan` | Every 4 weeks | Review meeting |
 | Enablement Sync with AppSec | `@vincywilson` | `TBD` | Monthly | Review meeting |
 
 ## Quality Engineering initiatives
