--- a/infrastructure/team/reliability/index.html.md.erb
+++ b/infrastructure/team/reliability/index.html.md.erb
@@ -100,15 +100,17 @@ We maintain a single source of truth epic for all work underway for the Reliabil
 
 ### OKRs
 
-[OKRs for the Reliability team](https://gitlab.com/gitlab-com/gitlab-OKRs/-/issues/?label_name%5B%5D=Sub-Department%3A%3AReliability) that require status tracking should be updated each Wednesday.
+[OKRs for the Reliability team](https://gitlab.com/gitlab-com/gitlab-OKRs/-/issues/?sort=updated_desc&state=opened&label_name%5B%5D=Sub-Department%3A%3AReliability&milestone_title=Any&first_page_size=100) that require status tracking should be updated each Wednesday.
 When updating the progress percentage of any given KR, it is not necessary to provide extensive notes.
 One sentence with a link to a larger update is sufficient in most cases.
 It is also acceptable to do a check-in without providing a note on a single occasion, but not over several check-ins.
 
-It is important that we set the following on every Reliability OKR:
+In addition to status updates every Wednesday, all objectives and key results assigned to the current quarter must have the following set:
 
-1. The label `~Sub-Department::Reliability`.
-1. An appropriate Reliability team label (e.g. `~Reliability::Practices`).
-1. For work that is scheduled, the OKR should be assigned to [one of the quarterly milestone](https://gitlab.com/gitlab-com/gitlab-OKRs/-/milestones).
+1. The `~Sub-Department::Reliability` label applied.
+1. The corresponding Reliability team label using the convention `~Reliability::<name>`. (e.g. `~Reliability::Practices`).
+1. For work that is scheduled, assigned to [one of the quarterly milestone](https://gitlab.com/gitlab-com/gitlab-OKRs/-/milestones).
+1. Health status set to something other than "None", all OKRs should be set to "On-track" until we believe there will be an issue meeting the objective or the key result.
+1. A DRI assigned.
 
 [Production Readiness]: /handbook/engineering/infrastructure/production/readiness/
