Set the goal for technical discover calls

--- a/development/ops/configure/index.html.md.erb
+++ b/development/ops/configure/index.html.md.erb
@@ -206,6 +206,8 @@ A technical discovery meeting consists of:
 - One host is decided for every meeting, and they are responsible to drive the conversation forward.
 - In the last meeting someone is appointed to summarize the conversation either in the original issue or a technical document.
 
+The goal of technical discovery meetings is to come up with a concrete technical proposal for the question at hand. We should not force a proposal, but aim to get there and write the conclusion accordingly with potential follow-ups.
+
 ### Planning
 
 #### Milestone Planning and Timeline
