Remove the certify team page

--- a/development/dev/plan/index.html.md.erb
+++ b/development/dev/plan/index.html.md.erb
@@ -26,7 +26,7 @@ working on GitLab's functionality around issues, issue boards, milestones, to-do
 
 In GitLab issues, questions should start by @ mentioning the Product Manager for the [corresponding Plan stage group](/handbook/product/categories/#plan-stage). GitLab team-members can also use [#s_plan](https://gitlab.slack.com/messages/C72HPNV97).
 
-For UX questions, @ mention the Product Designers on the Plan stage; [Nick Leonard](https://gitlab.com/nickleonard) for Plan:Project Management, [Alexis Ginsberg](https://gitlab.com/uhlexsis) for Plan:Product Planning, [Dan Mizzi-Harris](https://gitlab.com/danmh) for Plan:Certify and [Blair Christopher](https://gitlab.com/badnewsblair) for Plan:Optimize.
+For UX questions, @ mention the Product Designers on the Plan stage; [Nick Leonard](https://gitlab.com/nickleonard) for Plan:Project Management, [Nick Brandt](https://gitlab.com/nickbrandt) for Plan:Product Planning, [Jacki Bauer](https://gitlab.com/jackib) for Plan:Knowledge and [Libor Vanc](https://gitlab.com/lvanc) for Plan:Optimize.
 
 ### How we work
 
