Update true-up pricing to recognize cloud licensing and QSRs

--- a/pricing/index.html.md.erb
+++ b/pricing/index.html.md.erb
@@ -363,8 +363,8 @@ We understand that our customers have non-developer use cases. Please [contact o
 ## True-up pricing
 
 1. With true-up pricing, the license/sale is never blocking user growth.
-1. We currently charge 100% for users added during the year, because some organizations gave an intentionally too-low estimate when we charged 50%. If we technically can count "user days," we can make it fair for everyone, but we're not sure if the technical and sales complexity is worth it.
-1. We're also doing quarterly true-up on request for larger customers.
+1. We currently charge 100% for users added during the year, because some organizations gave an intentionally too-low estimate when we charged 50%. If we technically can count "user days," we can make it fair for everyone. A pre-requisite of this would be customer adoption of [Cloud Licensing](/pricing/licensing-faq/cloud-licensing/).
+1. For customers on Cloud Licensing, we offer [Quarterly Subscription Reconciliation](https://docs.gitlab.com/ee/subscriptions/quarterly_reconciliation.html).
 
 ## Consumption pricing principles
 
