Staying informed and informing others in Secure

--- a/development/sec/secure/index.html.md.erb
+++ b/development/sec/secure/index.html.md.erb
@@ -268,6 +268,33 @@ They give a good overview of the decision process, which is often a discussion w
 
 We welcome team members to join meetings that are on our shared calendar. The [Secure Calendar](https://calendar.google.com/calendar?cid=Z2l0bGFiLmNvbV9tZDBhbzM2Z3B2bDV2MWY0MTI4ZXJobmo2Z0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t) is available to all logged in GitLab team members.
 
+### Staying informed
+
+GitLab is an extremely active organization which generates a lot of news and activity each week. Everyone in Secure are encouraged to [keep themselves informed](/handbook/engineering/#keeping-yourself-informed) as to what is happening in the larger organzation. Everyone is also 
+encouraged to contribute to these channels and communication paradigms when you have information to share.
+
+In addition to this, each group in Secure conducts a weekly synchronous meeting. These meetings are publicized on the Secure Calendar mentioned above. As always at GitLab, we strive to [make meeting attendance optional](/company/culture/all-remote/meetings/#1-make-meeting-attendance-optional). 
+
+#### Keeping others informed
+
+In addition to keeping yourself informed, team members are encouraged to keep others informed as well. Secure groups have adopted a practice of including the following topics as standing agenda items in their weekly meetings, with example
+topics for each bullet point.
+
+- **Current status**
+  - Work recently achieved against top priorities for that milestone.
+  - Newly discovered scope or dependencies. 
+- **Risks**
+  - Issues which are blocked or slowed, impacting whether they can be delivered in the desired timeframe.
+- **Help wanted**
+  - Issues or topics on which the team or individuals on the team are getting stuck and could use some help.
+- **Praise**
+  - Anyone doing a great job and you want to give them kudos?
+  - Any bit of work which has been delivered that's exceptional?
+
+Engineering Managers are responsible for populating this section of weekly group meetings, though everyone can contribute. In addition to helping the group keep itself informed about what's happening each week, the SEM for Secure will collect
+this information weekly and broadcast a curated list to the section.
+
+**Note**: We will experiment with this practice from 2022-02-01 until 2022-02-28. At the end of this period, we'll look to collect feedback on what worked well or didn't work well and identify next steps from there. 
 #### Technical onboarding
 
 New hires should go through these steps and read the corresponding documentation when onboarding in the Secure Team.
