Updated for FY'24 Pooled Role

--- a/job-families/sales/smb-customer-advocate/index.html.md.erb
+++ b/job-families/sales/smb-customer-advocate/index.html.md.erb
@@ -37,7 +37,8 @@ As an SMB First Order Account Executive, you will be one of the first interactio
 
 #### SMB Pooled Account Executive
 
-As an SMB Pooled Account Executive, you will work with customers renewing their subscription with GitLab to ensure they have a successful renewal as well as helping them evaluate any additional product evaluations that they need. Responsibilities include engaging with customers prior to their renewal, evaluating their current utilization of GitLab and making recommendations to ensure a successful renewal and continued adoption of GitLab based on their needs. Acquiring new customers can cost up to five times more than retaining existing customers, and your ability to help our customers renew their subscription and get the support they need will be critical to our long term success. 
+As an SMB Pooled Account Executive, you will work closely with our top Pooled customers renewing their subscription with GitLab to ensure they have a successful renewal as well as helping them evaluate any additional product evaluations that they need. Responsibilities within our top Pooled customers include engaging with customers prior to their renewal, evaluating their current utilization of GitLab and making recommendations to ensure a successful renewal and continued adoption of GitLab based on their needs.  The SMB Pooled Account Executive will also be responsible for supporting our entire Pooled customer base on an as-needed basis, partnering closely with the Self-Service team.  Acquiring new customers can cost up to five times more than retaining existing customers, and your ability to help our customers renew their subscription and get the support they need will be critical to our long term success.
+
 
 #### SMB Expansion Account Executive
 
