Add guidance for teams without PD

--- a/product/product-processes/index.html.md.erb
+++ b/product/product-processes/index.html.md.erb
@@ -1320,6 +1320,14 @@ As the GitLab product matures, we know we must make important workflows easier t
 
 This effort aligns with the [Category Maturity](/direction/maturity/) goals that move areas of our product from minimal to viable to complete and, finally, lovable.
 
+**What if your team doesn't have a designer?**
+
+We are currently not able to have a dedicated Product Designer for each group. We ask teams to be as self-sufficient as possible. If your team has questions where you would usually turn towards the Product Designer, you have the following options:
+
+- Review whether your question might be answered in the [Pajamas guidelines](https://design.gitlab.com/).
+- If that's not the case, or the guidance is not clear, reach out via the #ux or #ux_coworking Slack channel.
+- For larger and more complex projects, work together with your Product Design Manager to create a [borrow request](https://about.gitlab.com/handbook/product/ux/product-design/product-design-manager.html#requesting-a-borrow). These will be reviewed by the Product and UX leadership together and have to be weighed against other priorities.
+
 #### From Prioritization to Execution
 
 As described above, prioritization is a multi-faceted problem. In order to
